# p1meter

./: .gitignore  LICENSE  README.md  pyproject.toml  smoketest_sender.py
.github/workflows/: build.yml
docker/: Dockerfile  docker-compose.yml
docs/: spec.txt
docs/systemd/: README.md  dsmr-mqtt.conf.example  dsmr-mqtt.service
internal/config/: config.go
internal/mqtt/: publisher.go
internal/serial/: reader.go
internal/telegram/: framer.go
p1-decoder/: .dockerignore  README.md  pyproject.toml
p1-decoder/docker/: docker-compose.yml
p1-decoder/p1_decoder/: _mqtt.py  _pipeline.py  config.py  headers.py  headers.yml  main.py  reader.py  stream.py
p1-decoder/tests/: test_pipeline.py
p1-to-mqtt/: .gitignore  Makefile  README.md  SECURITY_AUDIT.md  go.mod
p1-to-mqtt/cmd/dsmr-mqtt/: main.go
p1-to-mqtt/docs/systemd/: README.md  dsmr-mqtt.conf.example  dsmr-mqtt.service
p1-to-mqtt/internal/config/: config.go
p1_decoder/: _anyio.py  _mqtt.py  _pipeline.py  archive.py  config.py  headers.py  main.py  pipeline.py  reader.py  stream.py  writer.py
