[project]
name = "p1-decoder"
version = "0.1.0"
description = ""
authors = [
    {name = "P1 Maintainers",email = "maintainers@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-decouple (>=3.8,<4.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
