[project]
name = "p1-decoder"
version = "0.1.0"
description = ""
authors = [
    {name = "P1 Maintainers",email = "maintainers@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-decouple (>=3.8,<4.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "anyio (>=4.0.0,<5.0.0)",
    "aiomqtt (>=2.0.0,<3.0.0)",
    "zstandard (>=0.22.0,<1.0.0)",
    "aiofiles (>=23.0.0,<24.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"

